master layout fixed to full page app with scrollbars for overflow

--- a/bizon/WebContent/bizon/css/default.css
+++ b/bizon/WebContent/bizon/css/default.css
@@ -1,6 +1,22 @@
- 	html, body, .container-fluid, .row-fluid   {
-	  height:100%;
+	html, body {
+	    margin: 0;
+	    padding: 0;
+	    height: 100%;
+	    overflow: hidden;
+	}
+ 	
+ 	.container-fluid {
+	 	position: absolute;
+	    top: 0;
+	    right: 0;
+	    bottom: 0;
+	    left: 0;
+	  min-height: 100%;	    
+ 	}
+ 	
+	.row-fluid   {
 	  min-height: 100%;
+	  height: 100%;
 	}
 	
 	body{
@@ -58,7 +74,7 @@
 	  border: 1px solid #ddd;
 	  border-radius: 5px 5px 0 0;
 	  border-bottom: 0;
-	  min-height:100%;
+/*	  min-height:100%;*/
 	  height:100%;	  
 	}
 	
@@ -408,6 +424,7 @@
 	
 	.list-content {
 		order:3;
+		overflow:auto;
 	}
 	
 	.list-content .toolbar {
